@@ -290,14 +290,34 @@ operator|.
 name|HIVEHWIWARFILE
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-operator|!
+name|String
+name|hivehome
+init|=
+name|System
+operator|.
+name|getenv
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"HIVE_HOME"
+argument_list|)
+decl_stmt|;
+name|File
+name|hwiWARFile
+init|=
 operator|new
 name|File
 argument_list|(
+name|hivehome
+argument_list|,
 name|hwiWAR
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|hwiWARFile
 operator|.
 name|exists
 argument_list|()
@@ -310,6 +330,13 @@ argument_list|(
 literal|"HWI WAR file not found at "
 operator|+
 name|hwiWAR
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
 argument_list|)
 expr_stmt|;
 block|}
@@ -331,7 +358,10 @@ name|webServer
 operator|.
 name|addWar
 argument_list|(
-name|hwiWAR
+name|hwiWARFile
+operator|.
+name|toString
+argument_list|()
 argument_list|,
 literal|"/hwi"
 argument_list|)
